--- a/frontend/popup.html
+++ b/frontend/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="width: 800px;">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +11,12 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Add ShadCN-style class utilities -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    body, html {
+      width: 800px;
+      min-width: 800px;
+    }
+  </style>
 </head>
 <body class="bg-gray-50">
   <div class="popup-container">
@@ -78,6 +84,23 @@
         <span class="btn-text">Extract & Process</span>
         <span class="loading-spinner hidden"></span>
       </button>
+      
+      <div class="feature-buttons">
+        <button class="feature-btn" id="podcast-btn" data-feature="podcast">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 14C13.1046 14 14 13.1046 14 12V6C14 4.89543 13.1046 4 12 4C10.8954 4 10 4.89543 10 6V12C10 13.1046 10.8954 14 12 14Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M19 9V12C19 15.866 15.866 19 12 19M5 9V12C5 15.866 8.13401 19 12 19M12 19V22M8 22H16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+          Generate Podcast
+        </button>
+        <button class="feature-btn" id="quiz-btn" data-feature="quiz">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M9 11L12 14L20 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M20 12V17C20 18.6569 18.6569 20 17 20H7C5.34315 20 4 18.6569 4 17V7C4 5.34315 5.34315 4 7 4H15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+          Create Quiz
+        </button>
+      </div>
     </section>
 
     <section id="result" class="popup-result">
@@ -85,9 +108,16 @@
     </section>
 
     <section id="audio-player" class="audio-player hidden">
-      <audio id="podcast-audio" controls>
-        Your browser does not support the audio element.
-      </audio>
+      <h3 class="audio-title">Podcast Audio</h3>
+      <div class="audio-container">
+        <audio id="podcast-audio" controls preload="auto" style="width:100%; display:block;">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+      <div class="audio-status">Loading podcast audio...</div>
+      <div class="audio-fallback-info" style="font-size:12px; color:#777; margin-top:10px; text-align:center;">
+        Note: If audio doesn't play automatically, press the play button.
+      </div>
     </section>
 
     <section id="storybook-view" class="storybook-view hidden">
