--- a/frontend/src/popup.html
+++ b/frontend/src/popup.html
@@ -1,32 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <title>StorySimplify</title>
-  <link rel="stylesheet" href="styles.css" />
+  <title>AI Browser Agent</title>
+  <style>
+    body {
+      width: 300px;
+      padding: 10px;
+      font-family: Arial, sans-serif;
+    }
+    .container {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    .input-group {
+      display: flex;
+      gap: 5px;
+    }
+    input {
+      flex: 1;
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button {
+      padding: 8px 12px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+    #response {
+      margin-top: 10px;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      min-height: 100px;
+    }
+  </style>
 </head>
 <body>
-  <div class="popup-container">
-    <div class="popup-header">
-      <h1>StorySimplify</h1>
-      <p>Select a mode and grade level</p>
+  <div class="container">
+    <h2>AI Browser Agent</h2>
+    <div class="input-group">
+      <input type="text" id="command" placeholder="Enter your command...">
+      <button id="execute">Execute</button>
     </div>
-    <div class="popup-controls">
-      <label>Explain Level: <span id="level-value">5</span></label>
-      <input type="range" id="explain-level" class="accentuity-slider" min="1" max="12" value="5" />
-      <div class="button-tabs">
-        <button class="tab-btn active" data-type="simplify">Simplify</button>
-        <button class="tab-btn" data-type="picture_book">Picture Book</button>
-        <button class="tab-btn" data-type="podcast">Podcast</button>
-        <button class="tab-btn" data-type="quiz">Quiz</button>
-      </div>
-      <button id="extract-btn" class="primary-btn">
-        <span class="btn-text">Extract & Process</span>
-        <div class="loading-spinner hidden"></div>
-      </button>
-    </div>
-    <div class="popup-footer">StorySimplify Extension</div>
+    <div id="response"></div>
   </div>
   <script src="popup.js"></script>
 </body>
-</html>
+</html> 
