--- a/frontend/src/popup.html
+++ b/frontend/src/popup.html
@@ -24,7 +24,13 @@
         <span class="btn-text">Extract & Process</span>
         <div class="loading-spinner hidden"></div>
       </button>
+      <div class="popup-result" id="result" style="margin-top: 20px;"></div>
+
     </div>
+
+    <!-- Show simplified output here -->
+    <div class="popup-result" id="result" style="margin-top: 20px;"></div>
+
     <div class="popup-footer">StorySimplify Extension</div>
   </div>
   <script src="popup.js"></script>
